@startuml
skinparam packageStyle rectangle

package "Account Management" {
  class Account {
    account.js
  }
}

package "Course Management" {
  class Course {
    course.js
  }
  class Week {
    week.js
  }
}

package "Content" {
  class Alphabet {
    alphabet.js
  }
  class AlphabetType {
    alphabet_type.js
  }
  class Grammar {
    grammar.js
  }
  class GrammarExample {
    grammar_example.js
  }
  class Kanji {
    kanji.js
  }
  class KanjiWord {
    kanji_word.js
  }
  class Vocabulary {
    vocabulary.js
  }
}


package "Videos" {
  class Video {
    video.js
  }
}

package "Miscellaneous" {
  class Role {
    role.js
  }
  class Status {
    status.js
  }
  class Day {
    day.js
  }
}

' Relationships between packages
Account ..> Role : has
Account ..> Enroll : enrolls in
Course ..> Week : spans

AlphabetType ..> Alphabet : categorizes
GrammarExample ..> Grammar : exemplifies
KanjiWord ..> Kanji : uses
Vocabulary ..> Course : part of


VideoQuestion ..> Video : relates to

Course ..> Video : includes
@enduml
